fix spacing mixin

--- a/abstract/_spacing.scss
+++ b/abstract/_spacing.scss
@@ -16,7 +16,7 @@
   @if list.length($params) == 0 {
     @error 'spacing::$args must supply at least one unitless number';
   }
-  $base: 'var(--spacing-base)';
+  $base: 'var(--ui-spacing-base)';
   $values: ();
   $i: 0;
   @each $param in $params {
@@ -25,7 +25,11 @@
         $base: $param;
       } @else if meta.type-of($param) == number {
         @if math.is-unitless($param) {
-          $values: list.append($values, string.unquote('calc(#{$base} * #{$param})'));
+          @if $param == 0 {
+            $values: list.append($values, 0);
+          } @else {
+            $values: list.append($values, string.unquote('calc(#{$base} * #{$param})'));
+          }
         } @else {
           $base: $param;
         }
@@ -34,7 +38,11 @@
       }
     } @else {
       @if meta.type-of($param) == number and math.is-unitless($param) {
-        $values: list.append($values, string.unquote('calc(#{$base} * #{$param})'));
+        @if $param == 0 {
+          $values: list.append($values, 0);
+        } @else {
+          $values: list.append($values, string.unquote('calc(#{$base} * #{$param})'));
+        }
       } @else {
         @error 'spacing::$arg[#{$i}] must be unitless number';
       }
